# ChangeLog for dev-ruby/rspec-expectations
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.69 2014/06/16 15:41:26 klausman Exp $

  16 Jun 2014; Tobias Klausmann <klausman@gentoo.org>
  rspec-expectations-2.14.5-r1.ebuild:
  Keyworded on alpha, bug #465948

  13 Jun 2014; Jeroen Roovers <jer@gentoo.org>
  rspec-expectations-2.14.5.ebuild:
  Stable for HPPA (bug #505920).

*rspec-expectations-2.99.0 (09 Jun 2014)

  09 Jun 2014; Hans de Graaff <graaff@gentoo.org>
  +rspec-expectations-2.99.0.ebuild:
  Version bump for rspec 2.99.

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org>
  rspec-expectations-2.14.5.ebuild:
  ia64 stable wrt bug #505920

  01 Jun 2014; Markus Meier <maekke@gentoo.org>
  rspec-expectations-2.14.5.ebuild:
  arm stable, bug #505920

  27 Apr 2014; Jeroen Roovers <jer@gentoo.org>
  rspec-expectations-2.14.5.ebuild:
  Marked ~hppa (bug #508828).

  26 Apr 2014; Jeroen Roovers <jer@gentoo.org>
  rspec-expectations-2.14.5.ebuild:
  Stable for HPPA (bug #508416).

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> rspec-expectations-2.12.1.ebuild,
  rspec-expectations-2.13.0.ebuild, rspec-expectations-2.14.5-r1.ebuild,
  rspec-expectations-2.14.5.ebuild:
  Remove ree18 and ruby18 target.

*rspec-expectations-2.14.5-r1 (01 Apr 2014)

  01 Apr 2014; Hans de Graaff <graaff@gentoo.org>
  +rspec-expectations-2.14.5-r1.ebuild:
  Add ruby21. Drop alpha, sparc keywords: bug 465948.

  27 Mar 2014; Manuel Rüger <mrueg@gentoo.org>
  -rspec-expectations-2.14.0.ebuild, -rspec-expectations-2.14.1.ebuild,
  -rspec-expectations-2.14.2.ebuild:
  Cleanup old.

*rspec-expectations-2.14.5 (13 Feb 2014)

  13 Feb 2014; Manuel Rüger <mrueg@gentoo.org>
  +rspec-expectations-2.14.5.ebuild:
  Version bump.

  26 Dec 2013; Markus Meier <maekke@gentoo.org>
  rspec-expectations-2.12.1.ebuild:
  arm stable, bug #493780

  06 Oct 2013; Hans de Graaff <graaff@gentoo.org>