@@ -5,17 +5,19 @@ DIST rspec-expectations-2.12.1-git.tgz 82402 SHA256 6166e27de969815085832f56d253
 DIST rspec-expectations-2.13.0-git.tgz 86856 SHA256 52f2aeb70289c21c7b8755c914a31b5cdd7c465bd9828730ac6889eecdb28f01 SHA512 0400797e0ced2d6ce8adddcba049e4f94fe3ec0da027869c86204dd3794738d59fe8594ee8e12fc733d39ba99820346798f37272c1a5eafa87d302c4e6ca0947 WHIRLPOOL 5379cb91cd4deb8786abafdc462a84644656d317f6c805f6a1494e6d2f95173778b877fcc803fe99ff590124724d29eaec39c8c66f3b246e653686aae28f9e76
 DIST rspec-expectations-2.14.5-git.tgz 93680 SHA256 ceba7a62ad87285f1ea01db4798efbbde4020b82a109cc260ec358061367e5b9 SHA512 237ed56cd185bc5d0d60ed14e20ded1840ef10711693c43ffaa20ec65cdd6b891aba3a6f1f38bb6962c31d51364758d1898e3bcba14a95c4abc73dff4dac1b65 WHIRLPOOL b9860d7bbd7e33143de655d3bcae6925a91ae5992f47b75ae9c61203c9cddcfb5a2ad0d8d3152a725ff4174359bdf56c5d8dbe24b4b1bb56e3aab292ddfc7a5d
 DIST rspec-expectations-2.99.0-git.tgz 106299 SHA256 cde69130a991ba19924b9010870ac18c03668d64cec090663f997880329a0a90 SHA512 4e3f3e0d27f3cdaee0b6ea00acf1d86629102303388d4549d529121e263919dcf14784b196c4eb3e7a74d89167d505ce8ab0239a8db6b7949bffc9834cf5dea2 WHIRLPOOL 79f22ab773e0bfc1257bfc8aa4b6a74e7bdc40b93ff9d30fdaf5b6155b949ba3e73d01f29386dc61a293cb06d712d81e064b5a8643125073b68ecb9a0b2258b5
+DIST rspec-expectations-2.99.1-git.tgz 106370 SHA256 fb6da394b1824a903c4640ba9b5fc854719677a0e04614d0776b39a1c8964f86 SHA512 67e40a9c5258759396016e0f559aff4ed82e3c5d216ec8cfc10d82fe3ea98ec1b247e0c6ed7e9b29e41388056da27dabe29b809d38415c65a56b7e4a3335248f WHIRLPOOL 5784109b531607274b52a9a802efffda4bf5e857cf94300c334f6fdf09672d973a0080f3c4c04a51b0c77e4b69b56b2df6bee9dde2d6cdb363859d195c306d8e
 EBUILD rspec-expectations-2.12.1.ebuild 1329 SHA256 407b4eb1588e96ca9bcf953bf86566353390b79a59785cd59cb40769ef0731d8 SHA512 d65522b2f59bcaef4e01ec8f439760ae279f2aa4ddec3610844b8d2e57467bbac57ef5c602b01d30178e340ffca1bef0837e3aefa325429a9cd8075b08f76b27 WHIRLPOOL 320083852b0d3f3a4b608b1542cec92de3755cc948c31494a5c1048677f0ef737e6e718a60a295d0cd58a5206ad28acfec735dd52dfaeff9e6345ac64adee654
 EBUILD rspec-expectations-2.13.0.ebuild 1320 SHA256 e6165490c8693328bf21534e776a2fa577acdbc5b9be414a61254eb30b7b8a40 SHA512 a8101dfb49bae97058d5d972db9a4ef1cc0e4a3cc8558249c908720e3cac1c2034ba80b68be9e0b293d0b439d6a2b41f747fa1a00f8798acd5faa62208fb93b6 WHIRLPOOL 7c71c72cc098c095cb904138728512fc797f2bed60c35798878e52c71f51eaf30cdc5ee364f08e5acde0a15d4cc1d7a2a2e9032e3a1ff81db617f890c5ea8fc9
 EBUILD rspec-expectations-2.14.5-r1.ebuild 1444 SHA256 6743e0b2848f285d1002a63a8eaeb17c7d59daad9b1e84be8ae55ea30e40760d SHA512 38ce27ef82d9e0b164f59aa2245e6aba72635163ff93044c455c277db1cf371c95e0df98a8c31ef2a1da54011dc6a34b53709fc8f62f7cb26a41920668420fd5 WHIRLPOOL 347774975df5f39768486147ce8edef55c052c95ef00c4d711bbb7f032ab43b51c620748636cb6226730a6178f79672b2ec3f09ea932024ddedde5105f83d4e8
 EBUILD rspec-expectations-2.14.5.ebuild 1433 SHA256 a98dd44e715f2c093790b42556a0b8bd0dd0b85e93b5a1cd23fe0cbda6a5f18c SHA512 cbffb370ec78fde85a94b894ab415dfdffcb6864678e792f9be74e86e3edc4628270c28a1519afba7686a02a3aca8c88e288986c6b084c4a961e13ce2a917eef WHIRLPOOL 7af6a6a352d7ca1a60a25273a9e05e0f423cc89c4f2bd0fc5bd97ae4f08c7b928b05daf65e40aee181d068941c4ecae11958eac53d5f604001827494d01d7d3c
 EBUILD rspec-expectations-2.99.0.ebuild 1815 SHA256 2f3978a30561d496ba6fecac5551cce5763e7f4f1e475b3a27caf6a48bb3571b SHA512 7d8d85709bea0cc5a09502cc3b67c10a0da9928e95fe666b833cd923b0b8e9cb222fca4770b3448f23a2a782fa18abda02299f3f4e5f60dfbd2db0f6d07d24d0 WHIRLPOOL e90a80b16b2e15535b07da17ec4774d4b7c760a1f43fc81f24062715fa24047f2fde73f6f7f93aa9e07b78ef1d40a3abbc2a9e4ab500aa7c3b2f249587e22760
-MISC ChangeLog 9750 SHA256 ea634c0513db5a1a3ba3e4d1fd0d3387246f99a283580527b4783c9ccf23ea5b SHA512 8c7a3bb0d00c01406871e98ba63baa8b5887cc40da512833650ac2d3487550b543ceb6a2ae6d00ea06f1e1d50e38139149237c0916ddcaebb6109d6714a00574 WHIRLPOOL 004cbd3e7e3d34018f41b759d0378cf4f952d61a0ac9b311fa9ca01dc41b8c4a0295f22e42d44bc138c79babc06ebbe07cf5ee9d7fdc13fedece9c1ae0a57790
+EBUILD rspec-expectations-2.99.1.ebuild 1815 SHA256 a7bd4b843a5226e1d055b3927311403340f0fb4dd11898531b5cfddf2c476256 SHA512 17801ca8919c6ce47b62d52f9d61b3bd543d933be4efbe9cb1de262b339db0b793b66d30194e49cb43a47eb507bfa51aa2e84ae9e2ba06322d85af0c9dd62ef2 WHIRLPOOL 1c6cecd10e285c5abbf66d7e17cce90310ce5985209839dab6ea19f5d4e78f690f831fdee5c90a8aff561447ac96937bd18520475813e71d7bb85741034c2ff7
+MISC ChangeLog 9894 SHA256 e6bc310f2a21c3bf9a626369246da98d982ae047a7e06eaa4b633200782f37d4 SHA512 87cc38da8efd1161f85f1566ef79fa58de60fc9bf3ee4dafb75c16a7c63f399c5a98a0a90ce9bfd0222c2ca36cda02e37533dc20a528bb1b9320f0d278a690b4 WHIRLPOOL 3af35dd5ae09f1810f29cbc5e186271462a6eb13197bb48fe373a4049b04e9fa6850fa0e5924a4141be618a569de7b68a74e9005f5c3323a213cdb4ebe8a6619
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlOfECcACgkQA+4Doc5dVOhNEwCcD5BQ6Z9lgni3W2xLba3MsweB
-ymAAn3JQFC8rX4C6dZ1Eq9+tTj2QLmvH
-=Zuru
+iF4EAREIAAYFAlO7es8ACgkQiIP6VqMIqNdTEwD/T7UrplssfI4qVh2RNcBZGbAo
+oGaZORT8zp8YcZJdyOkA/iSMIrf/dEVSnOSLqCc9HYbNCECCu66hLxkAIKgwUHkz
+=6Bnj
 -----END PGP SIGNATURE-----
