@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/diff-lcs-1.1.3[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/diff-lcs-1.1.3[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/diff-lcs-1.1.3[ruby_targets_ruby21] ) ruby_targets_jruby? ( >=dev-ruby/diff-lcs-1.1.3[ruby_targets_jruby] ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/rspec-core-2.11.0:2[ruby_targets_ruby19] >=dev-ruby/rspec-mocks-2.14.0:2[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( >=dev-ruby/rspec-core-2.11.0:2[ruby_targets_ruby20] >=dev-ruby/rspec-mocks-2.14.0:2[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( >=dev-ruby/rspec-core-2.11.0:2[ruby_targets_ruby21] >=dev-ruby/rspec-mocks-2.14.0:2[ruby_targets_ruby21] ) ) ruby_targets_jruby? ( test? ( >=dev-ruby/rspec-core-2.11.0:2[ruby_targets_jruby] >=dev-ruby/rspec-mocks-2.14.0:2[ruby_targets_jruby] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby19? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby21] ) ) ruby_targets_jruby? ( test? ( dev-ruby/rspec:2[ruby_targets_jruby] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) )
+DESCRIPTION=A Behaviour Driven Development (BDD) framework for Ruby
+EAPI=5
+HOMEPAGE=http://rspec.rubyforge.org/
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_jruby test test
+KEYWORDS=~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/diff-lcs-1.1.3[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/diff-lcs-1.1.3[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/diff-lcs-1.1.3[ruby_targets_ruby21] ) ruby_targets_jruby? ( >=dev-ruby/diff-lcs-1.1.3[ruby_targets_jruby] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_jruby )
+SLOT=2
+SRC_URI=https://github.com/rspec/rspec-expectations/archive/v2.99.1.tar.gz -> rspec-expectations-2.99.1-git.tgz
+_eclasses_=eutils	76fc3c462065bb4ca959f939e6793f94	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	fac675dcccf94392371a6abee62d909f	ruby-fakegem	738ee4b7f8b16d4a734b4d37717db89b	ruby-ng	14f0490e24cbad7c17cece628b3d111e	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=583e2be3a3d6efc6b854b58e60d0e5c2
