@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/rspec-expectations
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.69 2014/06/16 15:41:26 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.70 2014/07/08 04:59:53 graaff Exp $
+
+*rspec-expectations-2.99.1 (08 Jul 2014)
+
+  08 Jul 2014; Hans de Graaff <graaff@gentoo.org>
+  +rspec-expectations-2.99.1.ebuild:
+  Version bump.
 
   16 Jun 2014; Tobias Klausmann <klausman@gentoo.org>
   rspec-expectations-2.14.5-r1.ebuild:
